# soft_render

./: .gitignore  2d.cpp  2d.h  CMakeLists.txt  Makefile  geometry.cpp  geometry.h  main.cpp  our_gl.cpp  our_gl.h  test.cpp  test_cube.cpp  未命名绘图.drawio
include/: geometry.h  model.h  my_gl.h  shader.h  transform.h
src/: my_gl.cpp  shader.cpp
test/: test_2d.cpp
